# typerpunk

./: Cargo.toml  LICENSE  README.md  config.json  install.sh  package.json  sentences.txt
crates/core/: Cargo.toml
crates/core/src/: app.rs  config.rs  game.rs  input.rs  lib.rs  multiplayer.rs  stats.rs  text.rs  theme.rs  types.rs  ui.rs  wasm.rs
crates/core/src/tests/: game_tests.rs  mod.rs  stats_tests.rs  text_tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
data/packs/: general.json  literature.json  programming.json  quotes.json
scripts/: extract_texts.js  merge_packs.js
src/: main.rs  test.rs
web/: index.html  launch.sh  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  types.ts  wasm.d.ts
web/src/components/: EndScreen.tsx  MainMenu.tsx  ThemeToggle.tsx  TypingGame.tsx
web/src/contexts/: ThemeContext.tsx
web/src/hooks/: useCoreGame.ts  useTheme.ts
web/src/styles/: ThemeToggle.css  TypingGame.css
web/src/types/: typerpunk.d.ts
