[package]
name = "typerpunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui = { version = "0.19.0", features = ["termion"] }
tui = "0.19.0"
termion = "2.0.1"
crossterm = "0.26.1"
rand = "0.8.5"
paragraph = "0.0.2"
console = "0.15.5"
ansi_term = "0.12.1"

