[workspace]
members = [
    "crates/core",
    "crates/tui",
    "crates/wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A modern typing test application with TUI and web interfaces"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
config = "0.13"
dirs = "5.0"
rlua = "0.19"
rand = "0.8"

# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Web/WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"

# Networking
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
