[package]
name = "typerpunk-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
typerpunk-core = { path = "../core", default-features = false, features = ["wasm", "serde"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "MouseEvent",
    "KeyboardEvent",
] }
serde = { workspace = true }
console_error_panic_hook = "0.1" 